--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,20 @@
 /* General Styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Tahoma, Verdana, sans-serif, sans-serif;
     margin: 0;
     padding: 0;
-    line-height: 1.8;
+    line-height: 1.5;
     color: #333;
     background: #f8f8f8;
 }
-h1, h2, h3 {
+h1 {
     margin: 0;
-    color: #fff;
+    line-height: 1.2;
+    color: #000;
+}
+h2, h3 {
+    margin: 0;
+    color: #1061af;
 }
 a {
     color: #007BFF;
@@ -33,7 +38,7 @@ a:hover {
     align-items: center;
 }
 .top-nav .logo img {
-    max-height: 50px;
+    max-height: 60px;
     width: auto;
 }
 .top-nav nav ul {
@@ -48,14 +53,14 @@ a:hover {
 }
 .top-nav nav ul li a {
     color: #333;
-    font-size: 1rem;
+    font-size: 1.3rem;
 }
 
 /* Hero Section */
 .hero {
     background: #1bb1e7;
-    color: white;
-    text-align: center;
+    color: black;
+    text-align: left;
     padding: 100px 20px;
 }
 .hero h1 {
@@ -69,7 +74,7 @@ a:hover {
 .hero .cta-button {
     display: inline-block;
     padding: 15px 30px;
-    background: #003366;
+    background: #1061af;
     color: white;
     border-radius: 5px;
     font-size: 1.2rem;
@@ -81,7 +86,7 @@ a:hover {
 
 /* Section Styles */
 section {
-    padding: 60px 20px;
+    padding: 40px 20px 0px 20px;
 }
 .container {
     width: 90%;
@@ -89,9 +94,30 @@ section {
     margin: 0 auto;
 }
 
+/* Services Section */
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+.service-box {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.service-box h3 {
+    color: #1061af;
+    margin-bottom: 10px;
+}
+.service-box p {
+    color: #333;
+}
+
 /* Footer Section */
 .footer {
-    background: #003366;
+    background: #1061af;
     color: white;
     padding: 40px 0;
 }
@@ -104,7 +130,9 @@ section {
     align-items: center;
 }
 .footer-left img {
-    max-height: 50px;
+    background: #fff;
+    max-height: 120px;
+    padding: 20px;
 }
 .footer-right {
     text-align: left;
