--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    font-family: Tahoma, Verdana, sans-serif, sans-serif;
+    font-family: Tahoma, Verdana, sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.5;
@@ -84,17 +84,22 @@ a:hover {
     background: #002244;
 }
 
-/* Section Styles */
-section {
-    padding: 40px 20px 0px 20px;
+/* About Section */
+.about {
+    padding: 40px 20px;
 }
-.container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
+.about h2 {
+    color: #1061af;
 }
 
 /* Services Section */
+.services {
+    background: #f4f4f4;
+    padding: 40px 20px;
+}
+.services h2 {
+    color: #1061af;
+}
 .services-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -130,7 +135,6 @@ section {
     align-items: center;
 }
 .footer-left img {
-    background: #fff;
     max-height: 120px;
     padding: 20px;
 }
